[gd_scene load_steps=8 format=3 uid="uid://dqhjv2biwvh6a"]

[ext_resource type="Script" path="res://Content/Scripts/Stage/Interfaces/unitButton.gd" id="1_po7nm"]
[ext_resource type="Texture2D" uid="uid://ci336xa80soml" path="res://Content/Graphics/UI/unitBackground.png" id="2_33mrh"]
[ext_resource type="FontFile" uid="uid://e6v3vtobkbj3" path="res://Content/Graphics/UI/font/GravityBold8.ttf" id="2_a41co"]
[ext_resource type="Texture2D" uid="uid://dhl7l2prcno8a" path="res://Content/Graphics/Sprites/object/crystal.png" id="3_lp3bx"]

[sub_resource type="Gradient" id="Gradient_ft2rt"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.392157)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j6luj"]
gradient = SubResource("Gradient_ft2rt")
width = 111
height = 63

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypga7"]
bg_color = Color(0.580392, 0.74902, 0.976471, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="unitButton" type="NinePatchRect"]
offset_left = -2.0
offset_top = 8.0
offset_right = 115.0
offset_bottom = 77.0
mouse_filter = 1
texture = ExtResource("2_33mrh")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
script = ExtResource("1_po7nm")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 115.0
offset_bottom = 67.0
max_value = 3.0
step = 0.1
value = 3.0
fill_mode = 5
texture_progress = SubResource("GradientTexture2D_j6luj")

[node name="TextureButton" type="TextureButton" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 111.0
offset_bottom = 63.0
action_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="TextureButton"]
position = Vector2(10, -4)
scale = Vector2(0.26, 0.26)
centered = false

[node name="manaTag" type="Control" parent="TextureButton"]
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -4.0
offset_right = 109.0
offset_bottom = 61.0
mouse_filter = 1

[node name="ColorRect" type="Panel" parent="TextureButton/manaTag"]
layout_mode = 0
offset_left = 65.25
offset_top = 42.25
offset_right = 108.25
offset_bottom = 60.25
theme_override_styles/panel = SubResource("StyleBoxFlat_ypga7")

[node name="mana" type="Label" parent="TextureButton/manaTag"]
layout_mode = 0
offset_left = 84.25
offset_top = 45.25
offset_right = 107.25
offset_bottom = 59.25
theme_override_fonts/font = ExtResource("2_a41co")
theme_override_font_sizes/font_size = 13
text = "00"
horizontal_alignment = 2

[node name="crystal" type="Sprite2D" parent="TextureButton/manaTag"]
position = Vector2(74.25, 51.25)
scale = Vector2(0.578125, 0.578125)
texture = ExtResource("3_lp3bx")

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
